Fixed height scaling edge case with margin on progressive-media element, added default grey background for progressive media elements, images are now not centered by default, fixed CSS for progressive media image with disabled javascript.

--- a/assets/css/progressive-media.css
+++ b/assets/css/progressive-media.css
@@ -5,7 +5,8 @@
     display: flex;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: auto;
+    background-color: #f5f5f5;
 }
 .progressive-media .progressive-media-aspect {
     position: relative;
@@ -21,10 +22,7 @@
     width: 100%;
     height: 100%;
 }
-.progressive-media.progressive-media-image {
-    margin: 0 auto;
-}
-.progressive-media.progressive-media-loaded.progressive-media-image .progressive-media-image-placeholder {
+.progressive-media-loaded.progressive-media-image .progressive-media-image-placeholder {
     visibility: hidden;
     opacity: 0;
 }
@@ -40,6 +38,9 @@
 }
 .progressive-media .progressive-media-image-original {
     z-index: 1;
+}
+.progressive-media noscript .progressive-media-image-original {
+    z-index: 4;
 }
 .progressive-media .progressive-media-blur {
     z-index: 3;
